# calculator

./: .env  CMakeLists.txt  README.md  docker-compose.yaml
include/: application.h  common.h  file_repository.h  handlers.h  interval.h  mysql_repository.h  operation.h  operation_request.h  operation_response.h  report_request.h  repository.h  repository_base.h
sql/: schema.sql
src/: application.c  common.c  file_repository.c  interval.c  main.c  mysql_repository.c  operation.c  operation_request.c  operation_response.c  report_request.c  repository.c
src/handlers/: calculate.c  health.c  report.c
tools/benchmark/: bench_calculate.sh  bench_health.sh
tools/requests/: calculate.sh  calculate_errors.sh  report.sh  report_errors.sh
tools/sql/: queries.sql
